--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   faker: ^2.1.0
   scoped_model: ^2.0.0
   font_awesome_flutter: ^10.5.0
+  get_it: ^7.6.4
 
 
   # The following adds the Cupertino Icons font to your application.
